# Atem

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vc140.idb
atemc/: CMakeLists.txt
atemc/module/: atemc.ixx  atemc.main.ixx
atemc/module/ast/: atemc.ast.ixx
atemc/module/ast/builder/: atemc.ast.builder.ixx
atemc/module/ast/operators/: atemc.ast.operators.abstractoperator.ixx  atemc.ast.operators.ixx
atemc/module/ast/types/: atemc.ast.types.abstractast.ixx  atemc.ast.types.aggregateinitializationexprast.ixx  atemc.ast.types.arrayliteralexprast.ixx  atemc.ast.types.binaryexprast.ixx  atemc.ast.types.booleanliteralexprast.ixx  atemc.ast.types.characterliteralexprast.ixx  atemc.ast.types.classdeclarationexprast.ixx  atemc.ast.types.constantdeclarationexprast.ixx  atemc.ast.types.contractexprast.ixx  atemc.ast.types.declarationexprast.ixx  atemc.ast.types.declstmtast.ixx  atemc.ast.types.deferexprast.ixx  atemc.ast.types.enumerationdeclarationexprast.ixx  atemc.ast.types.exprast.ixx  atemc.ast.types.extensiondeclarationexprast.ixx  atemc.ast.types.floatingpointliteralexprast.ixx  atemc.ast.types.forexprast.ixx  atemc.ast.types.functiondeclarationexprast.ixx  atemc.ast.types.ifexprast.ixx  atemc.ast.types.integerliteralexprast.ixx  atemc.ast.types.ixx  atemc.ast.types.literalexprast.ixx  atemc.ast.types.moduleast.ixx  atemc.ast.types.moduledeclarationexprast.ixx  atemc.ast.types.namespacedeclarationexprast.ixx  atemc.ast.types.nullliteralexprast.ixx  atemc.ast.types.packagedeclarationexprast.ixx  atemc.ast.types.pathexprast.ixx  atemc.ast.types.projectdeclarationexprast.ixx  atemc.ast.types.protocoldeclarationexprast.ixx  atemc.ast.types.repeatwhileexprast.ixx  atemc.ast.types.sourceast.ixx  atemc.ast.types.stmtast.ixx  atemc.ast.types.stringliteralexprast.ixx  atemc.ast.types.structdeclarationexprast.ixx  atemc.ast.types.ternaryexprast.ixx  atemc.ast.types.testdeclarationexprast.ixx  atemc.ast.types.typeexprast.ixx  atemc.ast.types.unaryexprast.ixx  atemc.ast.types.undefinedliteralexprast.ixx  (+3 more)
atemc/module/ast/visitor/: atemc.ast.visitor.ixx
atemc/module/basic/: atemc.basic.ixx  atemc.basic.object.ixx  atemc.basic.rawsourcefile.ixx  atemc.basic.sourcelocation.ixx
atemc/module/codegen/: atemc.codegen.ixx
atemc/module/exception/: atemc.exception.abstractexception.ixx  atemc.exception.exceptionhandler.ixx  atemc.exception.internalexception.ixx  atemc.exception.ixx  atemc.exception.parseexception.ixx  atemc.exception.semanticexception.ixx
atemc/module/frontend/: atemc.frontend.ixx
atemc/module/grammar/: AtemLexer.g4  AtemParser.g4  atemc.grammar.baselistener.ixx  atemc.grammar.basevisitor.ixx  atemc.grammar.ixx  atemc.grammar.lexer.ixx  atemc.grammar.listener.ixx  atemc.grammar.parser.ixx  atemc.grammar.visitor.ixx
atemc/module/main/: atemc.main.ixx
atemc/module/optimizer/: atemc.optimizer.ixx
atemc/module/semantic/: atemc.semantic.ixx
atemc/module/semantic/cfa/: atemc.semantic.cfa.ixx
atemc/module/semantic/symboltable/: atemc.semantic.symboltable.ixx
atemc/module/semantic/types/: atemc.semantic.types.ixx
atemc/module/semantic/types/concrete/: atemc.semantic.types.concrete.abstracttype.ixx  atemc.semantic.types.concrete.booleantype.ixx  atemc.semantic.types.concrete.bytetype.ixx  atemc.semantic.types.concrete.charactertype.ixx  atemc.semantic.types.concrete.compositetype.ixx  atemc.semantic.types.concrete.comptimecharactertype.ixx  atemc.semantic.types.concrete.comptimefloatingpointtype.ixx  atemc.semantic.types.concrete.comptimeintegertype.ixx  atemc.semantic.types.concrete.comptimestringtype.ixx  atemc.semantic.types.concrete.dynamicarraytype.ixx  atemc.semantic.types.concrete.floatingpointtype.ixx  atemc.semantic.types.concrete.functiontype.ixx  atemc.semantic.types.concrete.integertype.ixx  atemc.semantic.types.concrete.ixx  atemc.semantic.types.concrete.maptype.ixx  atemc.semantic.types.concrete.nevertype.ixx  atemc.semantic.types.concrete.pointertype.ixx  atemc.semantic.types.concrete.settype.ixx  atemc.semantic.types.concrete.signedintegertype.ixx  atemc.semantic.types.concrete.sizeintegertype.ixx  atemc.semantic.types.concrete.staticarraytype.ixx  atemc.semantic.types.concrete.stringtype.ixx  atemc.semantic.types.concrete.typeexprast.ixx  atemc.semantic.types.concrete.typetype.ixx  atemc.semantic.types.concrete.unittype.ixx  atemc.semantic.types.concrete.unsignedintegertype.ixx  atemc.semantic.types.concrete.wildcardtype.ixx
atemc/module/semantic/types/visitor/: atemc.semantic.types.visitor.ixx
atemc/module/utils/: atemc.utils.ixx
